--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -8,13 +8,13 @@
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
 // Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not
 //       have the proper paths. So for now we use the absolute path.
-@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
+/*@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
 @fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
 @fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
 @fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
-
+*/
 // Font Awesome
-@import "fontawesome";
+//@import "fontawesome";
 
 // Your custom LESS stylesheets goes here
 //
@@ -26,3 +26,76 @@
 //
 // Example:
 // @linkColor: #ff0000;
+
+body {
+  padding-top: 60px;
+  background: url('happy_bg.png') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: 'Raleway', sans-serif;
+}
+@media (max-width: 979px) {
+  body {
+    padding-top: 0px;
+  }
+}
+
+.navbar .brand {
+  font-weight: 500;
+  color: black;
+}
+
+.home .progress {
+  margin: 10px;
+  height: 25px;
+  margin-top: 20px;
+}
+.welcome .progress {
+  position: absolute;
+  margin: 10px;
+  top: 50%;
+  width: 64%;
+  left: 18%;
+  height: 25px;
+}
+
+.welcome .btn {
+  position: absolute;
+  top: 85%;
+  right: 10%;
+}
+
+.welcome .btn a {
+  text-align: center;
+}
+.moment {
+  margin: 10px;
+  background-color: #fff600;
+  padding: 2px;
+}
+.moment .tags {
+  float: left;
+}
+.moment .date {
+  float: right;
+}
+.moment .details {
+  margin-top: 3px;
+  width: auto;
+  height: 15px;
+}
+.moment img {
+  display: block
+}
+
+.start {
+  margin: 10px;
+  margin-top: 40px;
+}
+
+.start h1 {
+  text-align: center;
+  margin: 20px 0 25px 0;
+}
