--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500' rel='stylesheet' type='text/css'>
+
     <%= stylesheet_link_tag "application", :media => "all" %>
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
@@ -35,48 +37,51 @@
     <%= favicon_link_tag 'images/favicon.ico', :rel => 'shortcut icon' %>
   </head>
   <body>
-
+  <% if logged_in? && params[:action] !='welcome' %>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Happy</a>
-          <div class="container nav-collapse">
-            <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
+        <%#= link_to 'HAPPY', root_path, :class => :brand%>
+        <ul class="nav">
+          <li>
+            <%= link_to root_path do %>
+              <i class="icon-home"></i>
+            <% end %>
+          </li>
+          <li class="divider-vertical"></li>
+          <li>
+            <%= link_to moments_path do %>
+              <i class="icon-eye-open"></i>
+            <% end %>
+          </li>
+          <li class="divider-vertical"></li>
+           <li>
+            <%= link_to new_moment_path do %>
+              <i class="icon-plus"></i>
+            <% end %>
+          </li>
+          <li class="divider-vertical"></li>
+           <li>
+            <%= link_to '#' do %>
+              <i class="icon-screenshot"></i>
+            <% end %>
+          </li>
+          <li class="divider-vertical"></li>
+           <li>
+            <%= link_to edit_user_registration_path(current_user) do %>
+              <i class="icon-wrench"></i>
+            <% end %>
+          </li>
+        </ul>
       </div>
     </div>
+  <% end %>
 
     <div class="container">
         <div class="row">
           <div class="span9">
              <%= yield %>
           </div>
-          <div class="span3">
-            <div class="well sidebar-nav">
-              <h3>Sidebar</h3>
-              <ul class="nav nav-list">
-                <li class="nav-header">Sidebar</li>
-                <li><%= link_to "Link1", "/path1"  %></li>
-                <li><%= link_to "Link2", "/path2"  %></li>
-                <li><%= link_to "Link3", "/path3"  %></li>
-              </ul>
-            </div><!--/.well -->
-          </div><!--/span-->
         </div><!--/row-->
-
-      <footer>
-        <p>&copy; Company 2012</p>
-      </footer>
 
     </div> <!-- /container -->
 
