--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -97,5 +97,13 @@ body {
 
 .start h1 {
   text-align: center;
-  margin: 20px 0 25px 0;
+  margin: 20px 0 30px 0;
+  font-size: 60px;
+}
+
+.start links {
+  margin-top: 20px;
+}
+.start a {
+  margin: 5px;
 }
