--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,11 @@
 <% if logged_in? %>
   <div class='home'>
     <div class='moment' style='opacity:<%= current_user.happiness.to_f/100%>'>
-      <%= render 'moments/photo' %>
+      <% if @moment.present? %>
+        <%= render 'moments/photo' %>
+      <% else %>
+
+      <% end %>
     </div>
     <div class="progress progress-warning">
       <div class="bar" style="width: <%= current_user.happiness %>%;"></div>
@@ -10,7 +14,9 @@
 <% else %>
   <div class='start'>
     <h1>HAPPY</h1>
-    <%= link_to 'Login',  new_user_session_path, :class => 'btn btn-large btn-warning btn-block'%>
-    <%= link_to 'Register',  new_user_registration_path, :class => 'btn btn-large btn-block'%>
+    <div class='links'>
+      <%= link_to 'Login',  new_user_session_path, :class => 'btn btn-large btn-warning btn-block'%>
+      <%= link_to 'Register',  new_user_registration_path, :class => 'btn btn-large btn-block'%>
+    </div>
   </div>
 <% end%>
