fixes and begining of email recieving

--- a/app/views/moments/_form.html.erb
+++ b/app/views/moments/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
   <div class="controls controls-row">
-    <%= f.text_area :content, :rows => 1, :class => 'span4' %>
+    <%= f.text_area :content, :rows => 1, :class => 'span4', :placeholder => 'Enter URL' %>
     <%= f.button '<i class="icon-chevron-right"></i>'.html_safe, :class => 'btn span1' %>
   </div>
 <% end %>
