--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -52,6 +52,16 @@ body {
   height: 25px;
   margin-top: 20px;
 }
+
+.home .btn {
+  margin: 50px;
+  margin-left: 10px
+}
+.home p {
+  margin: 0 0 10px;
+  text-align: center;
+  font-weight: 500;
+}
 .welcome .progress {
   position: absolute;
   margin: 10px;
