--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -4,7 +4,7 @@
       <div class="bar" style="width: 50%;"></div>
     </div>
         <%= link_to root_path, :class =>'btn btn-warning' do %>
-          <%= "Let's go #{current_user ? current_user.name : ''}" %><i class="icon-chevron-right icon-white"></i>
+          <%= "Let's go, #{current_user ? current_user.name : ''}" %><i class="icon-chevron-right icon-white"></i>
         <% end%>
   </div>
 </div>
