--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
           </li>
           <li class="divider-vertical"></li>
            <li>
-            <%= link_to '#' do %>
+            <%= link_to challenges_path do %>
               <i class="icon-screenshot"></i>
             <% end %>
           </li>
