--- a/app/views/moments/show.html.erb
+++ b/app/views/moments/show.html.erb
@@ -12,7 +12,7 @@
     <% elsif @moment.email.present? %>
       <%= render 'email'%>
     <% elsif @moment.url.blank? && @moment.content.present? %>
-      <%= moment.content %>
+      <%= @moment.content %>
     <% end %>
   </div>
 <!--   </div>
